# obs-live-translate

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  buildspec.json
.github/workflows/: release-windows.yaml  release.yaml
cmake/common/: buildspec_common.cmake
docs/superpowers/plans/: 2026-06-16-obs-live-translate-plugin.md  2026-06-16-translated-audio-push-output.md  2026-06-16-translated-audio-smooth-playback.md  2026-06-19-single-session-guard.md
docs/superpowers/specs/: 2026-06-16-obs-live-translate-design.md  2026-06-16-translated-audio-push-output-design.md  2026-06-16-translated-audio-smooth-playback-design.md  2026-06-19-single-session-guard-design.md
installer/: obs-live-translate.iss
src/: audio-convert.cpp  audio-convert.hpp  audio-pacing.cpp  audio-pacing.hpp  backoff.cpp  backoff.hpp  base64.cpp  base64.hpp  filter.cpp  languages.hpp  live-protocol.cpp  live-protocol.hpp  owner-guard.cpp  owner-guard.hpp  plugin-main.cpp  ring-buffer.cpp  ring-buffer.hpp  source.cpp  translation-session.cpp  translation-session.hpp
tests/: CMakeLists.txt  test-audio-convert.cpp  test-audio-pacing.cpp  test-backoff.cpp  test-base64.cpp  test-live-protocol.cpp  test-main.cpp  test-owner-guard.cpp  test-ring-buffer.cpp  test-smoke.cpp
